Changed syntax highlight color

--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -179,7 +179,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   color: #fff;
-  background-color: #2f3644;
+  background-color: #1d1f27;
 }
 pre code {
   padding: 0;
