--- a/_scss/base/_syntax.scss
+++ b/_scss/base/_syntax.scss
@@ -6,7 +6,7 @@
 } /* Comment */
 //.highlight .err { color: #a00; background-color: #faa } /* Error */
 .highlight .k {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword */
 .highlight .o {
   color: #fff;
@@ -56,19 +56,19 @@
   color: #9c6;
 } /* Generic.Traceback */
 .highlight .kc {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword.Constant */
 .highlight .kd {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword.Declaration */
 .highlight .kn {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword.Namespace */
 .highlight .kp {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword.Pseudo */
 .highlight .kr {
-  color: #ffb454;
+  color: hsl(350, 40%, 70%);
 } /* Keyword.Reserved */
 .highlight .kt {
   color: #078;
@@ -134,35 +134,35 @@
   color: #f60;
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Char */
 .highlight .sd {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
   font-style: italic;
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Double */
 .highlight .se {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Escape */
 .highlight .sh {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Heredoc */
 .highlight .si {
   color: #a00;
 } /* Literal.String.Interpol */
 .highlight .sx {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Other */
 .highlight .sr {
   color: #3aa;
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: #c2d94c;
+  color: hsl(75, 70%, 60%);
 } /* Literal.String.Single */
 .highlight .ss {
   color: #fc3;
