--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <div class="container">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
-             <small>Lloyd's Dev Blog{{ site.tagline }}</small>
+             <small>Lloyd's Dev Blog | {{ site.tagline }}</small>
             </a>
          
         </h3>
